Revitalize platform support with Sponge 12/13 + Standalone
* Refactored some elements of platform library loading and cut
  down redundant patterns. SnakeYaml is now a dynamic
  dependency, and platform name and version are passed all the
  way through to /libertybans and printed on startup.
* Sponge API 12 and 13 is supported without sacrificing API
  8 or 9. This is accomplished with abstraction and smooth
  runtime selection of the implementation.
* Add Mups to contributors file for bringing up Sponge 12/13.
  It was filed as #297 but Mups helped significantly with
  investigation and debugging.
* Compile-time Java requirement is now JDK 21, which was needed
  to support Sponge API 12/13 classes. While a bonus, this change
  exposes LibertyBans to JDK-9078340 (a bug I filed myself)
  whereby ACC_MANDATED on erases generic information from record
  constructor parameters. So for now, SelectionResources has to
  change back to a regular class.
* The Standalone platform is now launchable without SnakeYaml
  as a byproduct of other changes. Hence, you can now pick up
  a LibertyBans plugin jar and turn it into a standalone instance
  when so ever you choose.