@@ -12,18 +12,6 @@
     <name>warn-actions</name>
     <artifactId>addon-warn-actions</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-opens space.arim.libertybans.core.addon.warnactions/space.arim.libertybans.core.addon.warnactions=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
